feat: add contact section and floating contact widget with updated links for enhanced user interaction

--- a/about.html
+++ b/about.html
@@ -120,6 +120,7 @@
       </div>
     </section>
 
+    <!-- Contact Section -->
     <section class="contact-nav-section" id="contact-nav-section">
       <div class="home-menu-service-container">
         <div class="nav-service-wrapper">
@@ -138,12 +139,17 @@
               <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#">Learn With Us</a></li>
+              <li>
+                <a href="https://it-wings-learn.netlify.app/" target="_blank"
+                  >Learn With Us</a
+                >
+              </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
+
     <main>
       <!-- ============================= -->
       <!-- HERO SECTION -->
@@ -159,6 +165,49 @@
         <div class="hero-content">
           <h1>About us</h1>
         </div>
+      </section>
+
+      <!-- Floating Contact Widget -->
+      <section class="social-contact-section">
+        <!-- Main Message Icon (Trigger) -->
+        <div class="contact-trigger">
+          <i class="fa-solid fa-message"></i>
+        </div>
+
+        <!-- Hidden Popup -->
+        <ul class="contact-popup">
+          <li>
+            <a href="#">
+              <figure>
+                <img src="images/Icon/whatsapp.png" alt="whatsapp" />
+              </figure>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/gmail.png" alt="email" /></figure
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/aratai.png" alt="aratai" /></figure
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/telephone.png" alt="telephone" /></figure
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/telegram.png" alt="telegram" /></figure
+            ></a>
+          </li>
+        </ul>
       </section>
 
       <!-- ============================= -->
@@ -233,7 +282,11 @@
             </div>
 
             <div class="why-image">
-              <img src="images/carrier-images/car2.png" alt="Team work" loading="lazy" />
+              <img
+                src="images/carrier-images/car2.png"
+                alt="Team work"
+                loading="lazy"
+              />
             </div>
           </div>
         </div>
@@ -390,7 +443,11 @@
               </li>
             </ul>
 
-            <a href="https://yourdomain.com/learn" class="edu-btn">
+            <a
+              href="https://it-wings-learn.netlify.app/"
+              target="_blank"
+              class="edu-btn"
+            >
               Start Learning Now
             </a>
           </div>
