--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
               <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#">Learn With Us</a></li>
+              <li>
+                <a href="https://it-wings-learn.netlify.app/" target="_blank"
+                  >Learn With Us</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -237,7 +241,12 @@
               Join our learning programs to master web development, software
               engineering, and next-gen IT skills with industry experts.
             </p>
-            <a href="#" class="banner-btn">Start Learning</a>
+            <a
+              href="https://it-wings-learn.netlify.app/"
+              target="_blank"
+              class="banner-btn"
+              >Start Learning</a
+            >
           </div>
         </div>
 
@@ -334,16 +343,35 @@
         <!-- Hidden Popup -->
         <ul class="contact-popup">
           <li>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="#">
+              <figure>
+                <img src="images/Icon/whatsapp.png" alt="whatsapp" />
+              </figure>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/gmail.png" alt="email" /></figure
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/aratai.png" alt="aratai" /></figure
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/telephone.png" alt="telephone" /></figure
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/telegram.png" alt="telegram" /></figure
+            ></a>
           </li>
         </ul>
       </section>
@@ -695,7 +723,11 @@
               </li>
             </ul>
 
-            <a href="https://yourdomain.com/learn" class="edu-btn">
+            <a
+              href="https://it-wings-learn.netlify.app/"
+              target="_blank"
+              class="edu-btn"
+            >
               Start Learning Now
             </a>
           </div>
@@ -960,7 +992,11 @@
               <h2>Grow Your Career</h2>
               <p>Learn high-demand skills with our free and paid courses.</p>
 
-              <a href="https://yourdomain.com/learn" class="popup-btn">
+              <a
+                href="https://it-wings-learn.netlify.app/"
+                target="_blank"
+                class="popup-btn"
+              >
                 Explore Courses →
               </a>
             </div>
