--- a/request.html
+++ b/request.html
@@ -156,7 +156,11 @@
               <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#">Learn With Us</a></li>
+              <li>
+                <a href="https://it-wings-learn.netlify.app/" target="_blank"
+                  >Learn With Us</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -263,22 +267,43 @@
 
       <!-- Floating Contact Widget -->
       <section class="social-contact-section">
+        <!-- Main Message Icon (Trigger) -->
         <div class="contact-trigger">
           <i class="fa-solid fa-message"></i>
         </div>
 
+        <!-- Hidden Popup -->
         <ul class="contact-popup">
           <li>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="#">
+              <figure>
+                <img src="images/Icon/whatsapp.png" alt="whatsapp" />
+              </figure>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/gmail.png" alt="email" /></figure
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/aratai.png" alt="aratai" /></figure
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/telephone.png" alt="telephone" /></figure
+            ></a>
+          </li>
+          <li>
+            <a href="#"
+              ><figure>
+                <img src="images/Icon/telegram.png" alt="telegram" /></figure
+            ></a>
           </li>
         </ul>
       </section>
