--- a/job_des.html
+++ b/job_des.html
@@ -510,10 +510,10 @@
     <!-- Main Validation Script -->
     <script>
       /* ------------------------------------------------------
-  Fetch Job Details
-------------------------------------------------------- */
+        Fetch Job Details
+      ------------------------------------------------------- */
       const urlParams = new URLSearchParams(window.location.search);
-      const referenceNumber = urlParams.get("ref");
+      const referenceNumber = urlParams.get("reference_number");
 
       if (!referenceNumber) {
         Toastify({
@@ -528,7 +528,7 @@
       async function fetchJobDetails() {
         try {
           const response = await fetch(
-            `http://127.0.0.1:8081/main/api/v1/job/ref/${referenceNumber}`
+            `https://official-it-wings-backend.onrender.com/api/jobs/get_job.php?reference_number=${referenceNumber}`
           );
           const result = await response.json();
 
@@ -539,25 +539,32 @@
           }
 
           const job = result.data;
+          console.log(job);
 
-          document.getElementById("jobTitle").textContent = job.jobTitle;
+          document.getElementById("jobTitle").textContent = job.job_title;
           document.getElementById("shortDescription").textContent =
-            job.shortDescription;
+            job.short_description;
           document.getElementById("fullDescription").textContent =
-            job.fullDescription;
+            job.full_description;
           document.getElementById("location").textContent = job.location;
           document.getElementById("openings").textContent = job.openings;
-          document.getElementById("postedDate").textContent = job.postedDate;
-          document.getElementById("expiryDate").textContent = job.expiryDate;
+          document.getElementById("postedDate").textContent = job.posted_date;
+          document.getElementById("expiryDate").textContent = job.expiry_date;
           document.getElementById(
             "experience"
-          ).textContent = `${job.experienceMin} - ${job.experienceMax} Years`;
+          ).textContent = `${job.experience_min} - ${job.experience_max} Years`;
           document.getElementById("referenceNumber").textContent =
-            job.referenceNumber;
+            job.reference_number;
 
-          document.getElementById("skills").innerHTML = job.skillSet
-            .map((s) => `<span>${s}</span>`)
-            .join(", ");
+          // ensure skillset is array
+          const skills =
+            typeof job.skillset === "string"
+              ? JSON.parse(job.skillset)
+              : job.skillset;
+
+          document.getElementById("skills").innerHTML = skills
+            ?.map((s) => `<span>${s}</span>`)
+            .join(" ");
         } catch (error) {
           console.error("Error fetching job:", error);
         }
@@ -565,8 +572,8 @@
       fetchJobDetails();
 
       /* ------------------------------------------------------
-   Form Validation + Submission
-------------------------------------------------------- */
+         Form Validation + Submission
+      ------------------------------------------------------- */
       const form = document.getElementById("applyForm");
 
       const fields = {
@@ -684,7 +691,7 @@
         formData.append("skills", f.skills.value.trim());
         formData.append("countryCode", f.countryCode.value);
         formData.append("mobileNumber", f.mobileNumber.value.trim());
-        formData.append("referenceNumber", referenceNumber);
+        formData.append("reference_number", referenceNumber);
         formData.append("resumeFile", f.resumeFile.files[0]);
 
         try {
