feat: update service links across multiple pages for improved navigation and consistency

--- a/career.html
+++ b/career.html
@@ -68,23 +68,33 @@
             <div class="list">
               <h2>All</h2>
               <ul>
-                <li>Govt.</li>
-                <li>Tech</li>
-                <li>Promotional</li>
-                <li>Others</li>
+                <li><a href="./service.html">Govt.</a></li>
+                <li><a href="./service.html">Tech</a></li>
+                <li>
+                  <a href="./service.html">Promotional</a>
+                </li>
+                <li><a href="./service.html">Others</a></li>
               </ul>
             </div>
+
             <div class="list">
               <h2>Govt</h2>
               <ul>
-                <li>Aadher</li>
-                <li>PAN</li>
-                <li>Voter</li>
-                <li>Home Loan</li>
-                <li>Business Loan</li>
-                <li>See More...</li>
+                <li><a href="./serviceInfo.html?id=aadher">Aadher</a></li>
+                <li><a href="./serviceInfo.html?id=pan">PAN</a></li>
+                <li><a href="./serviceInfo.html?id=voter">Voter</a></li>
+                <li><a href="./serviceInfo.html?id=home-loan">Home Loan</a></li>
+                <li>
+                  <a href="./serviceInfo.html?id=business-loan"
+                    >Business Loan</a
+                  >
+                </li>
+                <li>
+                  <a href="./serviceInfo.html?id=govt-more">See More...</a>
+                </li>
               </ul>
             </div>
+
             <div class="list">
               <h2>Tech</h2>
               <ul>
@@ -93,32 +103,52 @@
                     >Web development</a
                   >
                 </li>
-                <li>App Development</li>
-                <li>API</li>
-                <li>Cloud</li>
-                <li>Course</li>
-                <li>See More...</li>
+                <li>
+                  <a href="./serviceInfo.html?id=app-development"
+                    >App Development</a
+                  >
+                </li>
+                <li><a href="./serviceInfo.html?id=api">API</a></li>
+                <li><a href="./serviceInfo.html?id=cloud">Cloud</a></li>
+                <li><a href="./serviceInfo.html?id=course">Course</a></li>
+                <li>
+                  <a href="./service.html">See More...</a>
+                </li>
               </ul>
             </div>
+
             <div class="list">
               <h2>Promotional</h2>
               <ul>
-                <li>Facebook</li>
-                <li>Youtube</li>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>Threads</li>
-                <li>See More...</li>
+                <li><a href="./serviceInfo.html?id=facebook">Facebook</a></li>
+                <li><a href="./serviceInfo.html?id=youtube">Youtube</a></li>
+                <li><a href="./serviceInfo.html?id=instagram">Instagram</a></li>
+                <li><a href="./serviceInfo.html?id=twitter">Twitter</a></li>
+                <li><a href="./serviceInfo.html?id=threads">Threads</a></li>
+                <li>
+                  <a href="./service.html">See More...</a>
+                </li>
               </ul>
             </div>
+
             <div class="list">
               <h2>Others</h2>
               <ul>
-                <li>Graphics design</li>
-                <li>Logo design</li>
-                <li>UI/UX</li>
-                <li>Ads design</li>
-                <li>See More...</li>
+                <li>
+                  <a href="./serviceInfo.html?id=graphics-design"
+                    >Graphics design</a
+                  >
+                </li>
+                <li>
+                  <a href="./serviceInfo.html?id=logo-design">Logo design</a>
+                </li>
+                <li><a href="./serviceInfo.html?id=ui-ux">UI/UX</a></li>
+                <li>
+                  <a href="./serviceInfo.html?id=ads-design">Ads design</a>
+                </li>
+                <li>
+                  <a href="./service.html">See More...</a>
+                </li>
               </ul>
             </div>
           </div>
