--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
             <div class="list">
               <h2>All</h2>
               <ul>
-                <li><a href="./serviceInfo.html?id=govt">Govt.</a></li>
-                <li><a href="./serviceInfo.html?id=tech">Tech</a></li>
+                <li><a href="./service.html">Govt.</a></li>
+                <li><a href="./service.html">Tech</a></li>
                 <li>
-                  <a href="./serviceInfo.html?id=promotional">Promotional</a>
+                  <a href="./service.html">Promotional</a>
                 </li>
-                <li><a href="./serviceInfo.html?id=others">Others</a></li>
+                <li><a href="./service.html">Others</a></li>
               </ul>
             </div>
 
@@ -118,7 +118,7 @@
                 <li><a href="./serviceInfo.html?id=cloud">Cloud</a></li>
                 <li><a href="./serviceInfo.html?id=course">Course</a></li>
                 <li>
-                  <a href="./serviceInfo.html?id=tech-more">See More...</a>
+                  <a href="./service.html">See More...</a>
                 </li>
               </ul>
             </div>
@@ -132,9 +132,7 @@
                 <li><a href="./serviceInfo.html?id=twitter">Twitter</a></li>
                 <li><a href="./serviceInfo.html?id=threads">Threads</a></li>
                 <li>
-                  <a href="./serviceInfo.html?id=promotional-more"
-                    >See More...</a
-                  >
+                  <a href="./service.html">See More...</a>
                 </li>
               </ul>
             </div>
@@ -155,7 +153,7 @@
                   <a href="./serviceInfo.html?id=ads-design">Ads design</a>
                 </li>
                 <li>
-                  <a href="./serviceInfo.html?id=others-more">See More...</a>
+                  <a href="./service.html">See More...</a>
                 </li>
               </ul>
             </div>
