--- a/service.html
+++ b/service.html
@@ -41,13 +41,13 @@
             <div class="nav-menu">
               <ul class="d-flex al-center">
                 <li id="nav-home">
-                  <a href="index.html" class="active">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li id="nav-about">
                   <a href="about.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="#">Service</a>
+                  <a href="#" class="active">Service</a>
                 </li>
                 <li id="nav-career"><a href="career.html">Career</a></li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
@@ -91,7 +91,7 @@
                   >
                 </li>
                 <li>
-                  <a href="./serviceInfo.html?id=govt-more">See More...</a>
+                  <a href="./service.html">See More...</a>
                 </li>
               </ul>
             </div>
