--- a/request.html
+++ b/request.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IT Wings | Request a Service</title>
 
+    <!-- ================= FAVICONS ================= -->
+    <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon_io/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon_io/favicon-32x32.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon_io/apple-touch-icon.png"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="images/favicon_io/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="images/favicon_io/android-chrome-512x512.png"
+    />
+
+    <link rel="manifest" href="images/favicon_io/site.webmanifest" />
+
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -36,9 +73,9 @@
         <div class="container">
           <div class="nav-wrapper d-flex al-center jc-between">
             <div class="logo d-flex al-center jc-between">
-              <a href="#">
+              <a href="index.html">
                 <figure>
-                  <img src="images/Baby.png" alt="logo" />
+                  <img src="./images/Icon/logo.png" alt="logo" />
                 </figure>
               </a>
 
