feat: update images for testimonials and replace outdated files for improved presentation

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                 </div>
                 <div class="testimonial-client">
                   <figure>
-                    <img src="images/testimonials/client1.jpg" alt="Client 1" />
+                    <img src="images/l1.png" alt="Client 1" />
                   </figure>
                   <div class="client-info">
                     <h3>Rahul Sharma</h3>
@@ -950,7 +950,7 @@
                 </div>
                 <div class="testimonial-client">
                   <figure>
-                    <img src="images/testimonials/client2.jpg" alt="Client 2" />
+                    <img src="images/l2.png" alt="Client 2" />
                   </figure>
                   <div class="client-info">
                     <h3>Priya Mehta</h3>
@@ -970,10 +970,10 @@
                 </div>
                 <div class="testimonial-client">
                   <figure>
-                    <img src="images/testimonials/client3.jpg" alt="Client 3" />
+                    <img src="images/l3.png" alt="Client 3" />
                   </figure>
                   <div class="client-info">
-                    <h3>James Wilson</h3>
+                    <h3>Jenny Wilson</h3>
                     <span>Marketing Head, CloudCore Inc.</span>
                   </div>
                 </div>
