--- a/about.html
+++ b/about.html
@@ -225,10 +225,11 @@
       <section class="hero-about">
         <div class="hero-overlay"></div>
         <img
-          src="images/Black and Gray Minimalist Shapes Personal Profile LinkedIn Banner.png"
+          src="images/about-banner.jpg"
           alt="IT-Wings Hero"
           class="hero-bg"
           loading="lazy"
+          style="background-position: center;"
         />
         <div class="hero-content">
           <h1>About us</h1>
