Update privacy policy and terms & conditions pages with new structure, content, and favicon links; fix footer links across multiple pages.

--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
           alt="IT-Wings Hero"
           class="hero-bg"
           loading="lazy"
-          style="background-position: center;"
+          style="background-position: center"
         />
         <div class="hero-content">
           <h1>About us</h1>
