feat: add E-learning link to navigation and update footer logo across multiple pages

--- a/career.html
+++ b/career.html
@@ -83,6 +83,9 @@
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
+                <li id="nav-service">
+                  <a href="error.html">E-learning</a>
+                </li>
                 <li id="nav-career">
                   <a href="career.html" class="active">Career</a>
                 </li>
@@ -390,27 +393,6 @@
           </div>
         </div>
       </section>
-
-      <section>
-        <div class="container">
-          <div class="awards-wrapper">
-            <div class="awards-content">
-              <h2>Recognized for Excellence</h2>
-              <p>
-                IT Wings has been honored for innovation, client satisfaction,
-                and excellence in digital transformation. These recognitions
-                fuel our motivation to go further every day.
-              </p>
-            </div>
-            <div class="awards-container">
-              <img src="images/carrier-images/award1" alt="Award 1" />
-              <img src="images/carrier-images/award2" alt="Award 2" />
-              <img src="images/carrier-images/award3" alt="Award 3" />
-              <img src="images/carrier-images/award4" alt="Award 4" />
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
 
     <!-- footer -->
@@ -431,8 +413,8 @@
           <!-- Logo & About -->
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
-              alt="ProFactory Logo"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
             />
             <p>
