--- a/index.html
+++ b/index.html
@@ -1070,8 +1070,8 @@
           <!-- Logo & About -->
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
-              alt="ProFactory Logo"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
             />
             <p>
