--- a/job_des.html
+++ b/job_des.html
@@ -101,6 +101,9 @@
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
+                <li id="nav-service">
+                  <a href="error.html">E-learning</a>
+                </li>
                 <li id="nav-career">
                   <a href="career.html" class="active">Career</a>
                 </li>
@@ -504,8 +507,8 @@
           <!-- Logo & About -->
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
-              alt="ProFactory Logo"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
             />
             <p>
