--- a/service.html
+++ b/service.html
@@ -86,6 +86,9 @@
                 <li id="nav-service">
                   <a href="#" class="active">Service</a>
                 </li>
+                <li id="nav-service">
+                  <a href="error.html">E-learning</a>
+                </li>
                 <li id="nav-career"><a href="career.html">Career</a></li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
@@ -341,8 +344,8 @@
           <!-- Logo & About -->
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
-              alt="ProFactory Logo"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
             />
             <p>
