--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,9 @@
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
+                <li id="nav-service">
+                  <a href="error.html">E-learning</a>
+                </li>
                 <li id="nav-career"><a href="career.html">Career</a></li>
                 <li>
                   <a href="#" id="nav-contact" class="active">Contact Us</a>
@@ -466,8 +469,8 @@
           <!-- Logo & About -->
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
-              alt="ProFactory Logo"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
             />
             <p>
