--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -90,6 +90,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="service.html">Service</a></li>
+                <li id="nav-service">
+                  <a href="error.html">E-learning</a>
+                </li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
@@ -345,9 +348,9 @@
         <div class="container footer-grid">
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
-              alt="IT Wings"
             />
             <p>
               We are committed to providing personalized industrial solutions
