--- a/request.html
+++ b/request.html
@@ -94,6 +94,9 @@
                 <li id="nav-service">
                   <a href="#">Service</a>
                 </li>
+                <li id="nav-service">
+                  <a href="error.html">E-learning</a>
+                </li>
                 <li id="nav-career"><a href="career.html">Career</a></li>
                 <li>
                   <a href="#" id="nav-contact" class="active">Contact Us</a>
@@ -393,8 +396,8 @@
         <div class="container footer-grid">
           <div class="footer-col about">
             <img
-              src="images/service-banner.jpg"
-              alt="ProFactory Logo"
+              src="images/Icon/logo.png"
+              alt="IT-Wings Webtech Solution"
               class="footer-logo"
             />
             <p>
