--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
       <section class="hero-about">
         <div class="hero-overlay"></div>
         <img
-          src="images/about-banner.jpg"
+          src="images/Gemini_Generated_Image_p37bjzp37bjzp37b.png"
           alt="IT-Wings Hero"
           class="hero-bg"
           loading="lazy"
